# melange-atdgen-codec-runtime

./: .gitignore  .ocamlformat  CHANGES.md  Makefile  README.md  bsconfig.json  dune  dune-project  esy.json  jest.config.js  melange-atdgen-codec-runtime.opam  package.json
.github/workflows/: build-test.yml
__tests__/: decode_test.ml  errors_test.ml  kind_field.ml  roundtrip_test.ml  test.atd  test_bs.ml  test_bs.mli  test_t.ml  test_t.mli
esy.lock/: index.json
example/: .gitignore  README.md  bsconfig.json  esy.json  events.json  package.json
example/esy.lock/: index.json
example/src/: cli.ml  dune  meetup.atd  meetup_bs.ml  meetup_bs.mli  meetup_t.ml  meetup_t.mli
example/src/test/: dune  main.t
src/: atdgen_codec_decode.ml  atdgen_codec_decode.mli  atdgen_codec_encode.ml  atdgen_codec_encode.mli  atdgen_codec_runtime.ml  atdgen_codec_runtime.mli  atdgen_json_adapter.ml  atdgen_json_adapter.mli  atdgen_runtime.ml  dune
src/__tests__/: decode_test.ml  dune  errors_test.ml  roundtrip_test.ml  test.atd
