opam-version: "2.0"
synopsis: "A Melange runtime for atdgen"
description: """A Melange runtime for atdgen, based on the Js.Json.t type
provided by Melange and the combinators from melange-json
"""
maintainer: "Ahrefs"
authors: "Ahrefs"
license: "MIT"
homepage: "https://github.com/ahrefs/melange-atdgen-codec-runtime"
bug-reports: "https://github.com/ahrefs/melange-atdgen-codec-runtime/issues"
depends: [
  "dune" {>= "3.8"}
  "ocaml"
  "melange" {>= "2.0.0"}
  "atd"
  "atdgen"
  "melange-json"
  "melange-jest" {with-test}
  "reason" {with-test}
  "opam-check-npm-deps" {with-test}
  "odoc" {with-doc}
]
build: [
  ["dune" "subst"] {dev}
  [
    "dune"
    "build"
    "-p"
    name
    "-j"
    jobs
    "@install"
    "@runtest" {with-test}
    "@doc" {with-doc}
  ]
]
dev-repo: "git+https://github.com/ahrefs/melange-atdgen-codec-runtime.git"

pin-depends: [
  ["melange.dev" "git+https://github.com/melange-re/melange#aeb07a4544b35196de76da23454b7f4d32bb3da8"]
  ["melange-json.dev" "https://github.com/melange-community/melange-json/archive/3bb100347eadf16c81c12c989e885a0dda23ea16.tar.gz"]
]
