opam-version: "2.0"
synopsis: "A Melange runtime for atdgen"
description: """A Melange runtime for atdgen, based on the Js.Json.t type
provided by Melange and the combinators from melange-json
"""
maintainer: "Ahrefs"
authors: "Ahrefs"
license: "MIT"
homepage: "https://github.com/ahrefs/melange-atdgen-codec-runtime"
bug-reports: "https://github.com/ahrefs/melange-atdgen-codec-runtime/issues"
depends: [
  "dune" {>= "3.8"}
  "ocaml"
  "melange" {>= "2.0.0"}
  "atd"
  "atdgen"
  "melange-json"
  "melange-jest" {with-test}
  "reason" {with-test}
  "opam-check-npm-deps" {with-test}
  "odoc" {with-doc}
]
build: [
  ["dune" "subst"] {dev}
  [
    "dune"
    "build"
    "-p"
    name
    "-j"
    jobs
    "@install"
    "@runtest" {with-test}
    "@doc" {with-doc}
  ]
]
dev-repo: "git+https://github.com/ahrefs/melange-atdgen-codec-runtime.git"

pin-depends: [
  ["melange.dev" "git+https://github.com/melange-re/melange#d2715c469e8cf8bf8cff81b897c212094a9517c5"]
  ["melange-json.dev" "https://github.com/melange-community/melange-json/archive/0039ac6c88a87c71c8bb54f38c31d67c032d2c8f.tar.gz"]
  ["melange-jest.dev" "https://github.com/melange-community/melange-jest/archive/0a0f4d203be04d4412c558114d2332d4814a9bbb.tar.gz"]
]
