opam-version: "2.0"
synopsis: "A Melange runtime for atdgen"
description: """A Melange runtime for atdgen, based on the Js.Json.t type
provided by Melange and the combinators from melange-json
"""
maintainer: "Ahrefs"
authors: "Ahrefs"
license: "MIT"
homepage: "https://github.com/ahrefs/melange-atdgen-codec-runtime"
bug-reports: "https://github.com/ahrefs/melange-atdgen-codec-runtime/issues"
depends: [
  "dune" {>= "3.8"}
  "ocaml"
  "melange" {>= "3.0.0"}
  "atd"
  "atdgen" {>= "2.16.0"}
  "melange-json" {>= "2.0.0"}
  "melange-jest" {with-test}
  "reason" {with-test}
  "opam-check-npm-deps" {with-test}
  "odoc" {with-doc}
]
build: [
  ["dune" "subst"] {dev}
  [
    "dune"
    "build"
    "-p"
    name
    "-j"
    jobs
    "@install"
    "@runtest" {with-test}
    "@doc" {with-doc}
  ]
]
dev-repo: "git+https://github.com/ahrefs/melange-atdgen-codec-runtime.git"
