(melange.emit
 (target example)
 (alias example)
 (libraries melange.node melange_atdgen_codec_runtime)
 (promote (until-clean)))

(rule
 (targets meetup_bs.ml meetup_bs.mli)
 (deps meetup.atd)
 (action
  (run atdgen -bs %{deps})))

(rule
 (targets meetup_t.ml meetup_t.mli)
 (deps meetup.atd)
 (action
  (run atdgen -t %{deps})))
