(melange.emit
 (target example)
 (alias example)
 (libraries melange.node melange_atdgen_codec_runtime)
 (promote (until-clean)))

(rule
 (targets meetup_mel.ml meetup_mel.mli)
 (deps meetup.atd)
 (action
  (run atdgen -mel %{deps})))

(rule
 (targets meetup_t.ml meetup_t.mli)
 (deps meetup.atd)
 (action
  (run atdgen -t %{deps})))
